--- a/app/src/main/res/layout/content_navigation_drawer.xml
+++ b/app/src/main/res/layout/content_navigation_drawer.xml
@@ -28,7 +28,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="76dp"
         android:layout_marginStart="64dp"
-        android:text="Go to grid layout"
+        android:text="Go to relative layout"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         android:onClick="goToRelativeLayout"
